.k8s/deployment.yaml
# Deployment do PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-app-movies-series
spec:
  selector:
    matchLabels:
      app: postgre-app-movies-series
  template:
    metadata:
      labels:
        app: postgre-app-movies-series
    spec:
      containers:
        - name: postgre-app-movies-series
          image: postgres:14.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
# Deployment da aplicação
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-movies-series
spec:
  selector:
    matchLabels:
      app: app-movies-series
  template:
    metadata:
      labels:
        app: app-movies-series
    spec:
      containers:
      - name: app-movies-series
        image: felipecs8/app-movies-series
        ports:
          - containerPort: 3000
