.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-movies-series-service
spec:
  selector:
    app: app-movies-series
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
  
---

apiVersion: v1
kind: Service
metadata:
  name: postgre-app-movies-series-service
spec:
  selector:
    app: postgre-app-movies-series
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
